--- a/AdminBackend/src/main/resources/application.properties
+++ b/AdminBackend/src/main/resources/application.properties
@@ -1,1 +1,23 @@
+#Spring DataSource
+spring.datasource.driverClassName=org.postgresql.Driver
+spring.sql.init.mode=always
+spring.sql.init.platform=postgres
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.username=postgres
+spring.datasource.password=1
 
+#Prikazuj SQL upite koje JPA generise
+spring.jpa.show-sql=true
+
+# Hibernate ddl-auto:
+#	validate: validira semu baze
+#	update: azurira semu baze
+#	create: kreira novu semu i brise postojece podatke
+#	create-drop: dropuje semu kada se aplikacija zaustavi
+spring.jpa.hibernate.ddl-auto=create-drop
+
+#Omogucava Hibernate-u da generise SQL koji je optimiyovan za odredjeni DBMS
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL95Dialect
+
+spring.profiles.active=development
+#logging.level.org.springframework.security=DEBUG
