--- a/AdminBackend/src/main/resources/application.properties
+++ b/AdminBackend/src/main/resources/application.properties
@@ -6,6 +6,9 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=postgres
 spring.datasource.password=1
 
+#da ne bi pokrenuo skriptu pre pravljenje tabele
+spring.jpa.defer-datasource-initialization=true
+
 #Prikazuj SQL upite koje JPA generise
 spring.jpa.show-sql=true
 
