--- a/AdminBackend/pom.xml
+++ b/AdminBackend/pom.xml
@@ -75,6 +75,10 @@
 			<version>1.70</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-mail</artifactId>
+		</dependency>
 
 	</dependencies>
 
