--- a/AdminBackend/src/main/resources/application.properties
+++ b/AdminBackend/src/main/resources/application.properties
@@ -25,8 +25,8 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL95Dialec
 ## mail servis
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=tim1aest@gmail.com
-spring.mail.password=mrs_isa11
+spring.mail.username=operacijeslanjemejla@gmail.com
+spring.mail.password=daiukfgxaqenakly
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
