--- a/AdminBackend/src/main/resources/application.properties
+++ b/AdminBackend/src/main/resources/application.properties
@@ -32,3 +32,11 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 
 spring.profiles.active=development
 #logging.level.org.springframework.security=DEBUG
+
+server.port=8443
+server.ssl.enabled=true
+server.ssl.key-store=src/main/resources/server.p12
+server.ssl.key-store-password=1
+server.ssl.key-store-type=PKCS12
+server.ssl.key-alias=server
+server.ssl.client-auth=need
