--- a/AdminBackend/src/main/resources/application.properties
+++ b/AdminBackend/src/main/resources/application.properties
@@ -39,4 +39,5 @@ server.ssl.key-store=src/main/resources/server.p12
 server.ssl.key-store-password=1
 server.ssl.key-store-type=PKCS12
 server.ssl.key-alias=server
-server.ssl.client-auth=need
+server.ssl.client-auth=want
+
