--- a/AdminBackend/src/main/resources/application.properties
+++ b/AdminBackend/src/main/resources/application.properties
@@ -5,6 +5,7 @@ spring.sql.init.platform=postgres
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=postgres
 spring.datasource.password=1
+spring.sql.init.encoding=UTF-8
 
 #da ne bi pokrenuo skriptu pre pravljenje tabele
 spring.jpa.defer-datasource-initialization=true
